--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -1,8 +1,8 @@
-<% include ../../partials/_header %>
+<% include ../partials/_header %>
 
   <body>
     <div class="container">
-      <h1>Football Home</h1>
+      <h1>League ***LEAGUE_NUMBER***</h1>
     </div>
 
 
