:made route for view select league information from db

--- a/views/football/league/create.ejs
+++ b/views/football/league/create.ejs
@@ -1,4 +1,9 @@
-<% include ../../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <% include ../../partials/_header %>
+    <title>Create League</title>
+  </head>
 
   <body>
     <div class="container">
