--- a/views/football/league/index.ejs
+++ b/views/football/league/index.ejs
@@ -1,1 +1,6 @@
-<p>yo</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <% include ../../partials/_header %>
+    <title>League List</title>
+  </head>
