--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -1,15 +1,19 @@
-<% include ../../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <% include ../../partials/_header %>
+    <title>League <%= (data.league.id) %></title>
+  </head>
 
   <body>
     <div class="container">
-      <h1>Football Home</h1>
+      <h1>League <%= (data.league.id) %></h1>
     </div>
+    <div class="container">
 
 
 
-
-
-
+    </div>
 
 
 
