--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -1,8 +1,13 @@
-<% include ../partials/_header %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <% include ../partials/_header %>
+    <title>Football Home</title>
+  </head>
 
   <body>
     <div class="container">
-      <h1>League ***LEAGUE_NUMBER***</h1>
+      <h1>Football Home</h1>
     </div>
 
 
