--- a/views/football/league/create.ejs
+++ b/views/football/league/create.ejs
@@ -53,20 +53,20 @@
         <div class="form-group">
           <label for="scoring">Scoring Type:</label>
           <div class="radio">
-            <label class="radio-inline"><input type="radio" name="scoring" value="standard">Standard</label>
-            <label class="radio-inline"><input type="radio" name="scoring" value="0.5">0.5 PPR</label>
-            <label class="radio-inline"><input type="radio" name="scoring" value="ppr">PPR</label>
+            <label class="radio-inline"><input type="radio" name="scoring" value="Standard">Standard</label>
+            <label class="radio-inline"><input type="radio" name="scoring" value="0.5 PPR">0.5 PPR</label>
+            <label class="radio-inline"><input type="radio" name="scoring" value="PPR">PPR</label>
           </div>
         </div>
         <div class="form-group">
           <label for="type">League Type:</label>
           <div class="radio">
-            <label class="radio-inline"><input type="radio" name="type" value="redraft">Redraft</label>
-            <label class="radio-inline"><input type="radio" name="type" value="dynasty">Dynasty</label>
-            <label class="radio-inline"><input type="radio" name="type" value="keeper">Keeper</label>
+            <label class="radio-inline leagueType"><input type="radio" name="type" value="Redraft">Redraft</label>
+            <label class="radio-inline leagueType"><input type="radio" name="type" value="Dynasty">Dynasty</label>
+            <label class="radio-inline leagueType"><input type="radio" name="type" id="keeperType" value="Keeper">Keeper</label>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group hide" id="keeper">
           <label for="keepers">Number of Keepers:
           <select class="form-control" id="keepers" name="keepers">
                 <option>0</option>
@@ -240,7 +240,7 @@
               </div>
               <div class="col-xs-1">
                 <label class="text-inline">Bench:
-                  <select class="form-control" id="bench" name="bench">
+                  <select class="form-control" id="Bench" name="Bench">
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
