ensures username is unique before entering in db

--- a/views/football/league/create.ejs
+++ b/views/football/league/create.ejs
@@ -1,18 +1,18 @@
 <% include ../../partials/_header %>
 
   <body>
-    <div class="container">
+    <div class='container'>
       <h1>Create League</h1>
     </div>
-    <div class="container">
-      <form action="/football/league/create" method="post">
-        <div class="form-group">
-          <label for="email">League Name:</label>
-          <input type="text" class="form-control" id="name" name="name">
+    <div class='container'>
+      <form action='/football/league/create' method='post'>
+        <div class='form-group'>
+          <label for='email'>League Name:</label>
+          <input type='text' class='form-control' id='name' name='name'>
         </div>
-        <div class="form-group">
-          <label for="email">Number of Teams:
-          <select class="form-control" id="size" name="size">
+        <div class='form-group'>
+          <label for='email'>Number of Teams:
+          <select class='form-control' id='size' name='size'>
                 <option>4</option>
                 <option>5</option>
                 <option>6</option>
@@ -21,7 +21,7 @@
                 <option>9</option>
                 <option>10</option>
                 <option>11</option>
-                <option selected="selected">12</option>
+                <option selected='selected'>12</option>
                 <option>13</option>
                 <option>14</option>
                 <option>15</option>
@@ -45,25 +45,25 @@
               </select>
             </label>
         </div>
-        <div class="form-group">
-          <label for="scoring">Scoring Type:</label>
-          <div class="radio">
-            <label class="radio-inline"><input type="radio" name="scoring" value="standard">Standard</label>
-            <label class="radio-inline"><input type="radio" name="scoring" value="0.5">0.5 PPR</label>
-            <label class="radio-inline"><input type="radio" name="scoring" value="ppr">PPR</label>
+        <div class='form-group'>
+          <label for='scoring'>Scoring Type:</label>
+          <div class='radio'>
+            <label class='radio-inline'><input type='radio' name='scoring' value='standard'>Standard</label>
+            <label class='radio-inline'><input type='radio' name='scoring' value='0.5'>0.5 PPR</label>
+            <label class='radio-inline'><input type='radio' name='scoring' value='ppr'>PPR</label>
           </div>
         </div>
-        <div class="form-group">
-          <label for="type">League Type:</label>
-          <div class="radio">
-            <label class="radio-inline"><input type="radio" name="type" value="redraft">Redraft</label>
-            <label class="radio-inline"><input type="radio" name="type" value="dynasty">Dynasty</label>
-            <label class="radio-inline"><input type="radio" name="type" value="keeper">Keeper</label>
+        <div class='form-group'>
+          <label for='type'>League Type:</label>
+          <div class='radio'>
+            <label class='radio-inline'><input type='radio' name='type' value='redraft'>Redraft</label>
+            <label class='radio-inline'><input type='radio' name='type' value='dynasty'>Dynasty</label>
+            <label class='radio-inline'><input type='radio' name='type' value='keeper'>Keeper</label>
           </div>
         </div>
-        <div class="form-group">
-          <label for="keepers">Number of Keepers:
-          <select class="form-control" id="keepers" name="keepers">
+        <div class='form-group'>
+          <label for='keepers'>Number of Keepers:
+          <select class='form-control' id='keepers' name='keepers'>
                 <option>0</option>
                 <option>1</option>
                 <option>2</option>
@@ -88,27 +88,27 @@
               </select>
             </label>
         </div>
-        <div class="form-group">
-          <label for="position">Roster Positions:</label>
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-1">
-                <label class="text-inline">QB:
-                  <select class="form-control" id="qb" name="qb">
+        <div class='form-group'>
+          <label for='position'>Roster Positions:</label>
+          <div class='container'>
+            <div class='row'>
+              <div class='col-xs-1'>
+                <label class='text-inline'>QB:
+                  <select class='form-control' id='qb' name='qb'>
                     <option>0</option>
-                    <option selected="selected">1</option>
+                    <option selected='selected'>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">RB:
-                  <select class="form-control" id="rb" name="rb">
+              <div class='col-xs-1'>
+                <label class='text-inline'>RB:
+                  <select class='form-control' id='rb' name='rb'>
                     <option>0</option>
                     <option>1</option>
-                    <option selected="selected">2</option>
+                    <option selected='selected'>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
@@ -116,12 +116,12 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">WR:
-                  <select class="form-control" id="wr" name="wr">
+              <div class='col-xs-1'>
+                <label class='text-inline'>WR:
+                  <select class='form-control' id='wr' name='wr'>
                     <option>0</option>
                     <option>1</option>
-                    <option selected="selected">2</option>
+                    <option selected='selected'>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
@@ -129,11 +129,11 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">TE:
-                  <select class="form-control" id="te" name="te">
+              <div class='col-xs-1'>
+                <label class='text-inline'>TE:
+                  <select class='form-control' id='te' name='te'>
                     <option>0</option>
-                    <option selected="selected">1</option>
+                    <option selected='selected'>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
@@ -142,13 +142,13 @@
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-xs-1">
-                <label class="text-inline">RB/WR/TE:
-                  <select class="form-control" id="rb_wr_te" name="rb_wr_te">
+            <div class='row'>
+              <div class='col-xs-1'>
+                <label class='text-inline'>RB/WR/TE:
+                  <select class='form-control' id='rb_wr_te' name='rb_wr_te'>
                     <option>0</option>
                     <option>1</option>
-                    <option selected="selected">2</option>
+                    <option selected='selected'>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
@@ -156,22 +156,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">RB/TE:
-                  <select class="form-control" id="rb_te" name="rb_te">
-                    <option>0</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
-                  </select>
-                </label>
-              </div>
-              <div class="col-xs-1">
-                <label class="text-inline">WR/TE:
-                  <select class="form-control" id="wr_te" name="wr_te">
+              <div class='col-xs-1'>
+                <label class='text-inline'>RB/TE:
+                  <select class='form-control' id='rb_te' name='rb_te'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -182,9 +169,22 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">QB/WR/RB/TE:
-                  <select class="form-control" id="qb_wr_rb_te" name="qb_wr_rb_te">
+              <div class='col-xs-1'>
+                <label class='text-inline'>WR/TE:
+                  <select class='form-control' id='wr_te' name='wr_te'>
+                    <option>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                  </select>
+                </label>
+              </div>
+              <div class='col-xs-1'>
+                <label class='text-inline'>QB/WR/RB/TE:
+                  <select class='form-control' id='qb_wr_rb_te' name='qb_wr_rb_te'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -197,10 +197,10 @@
               </div>
 
             </div>
-            <div class="row">
-              <div class="col-xs-1">
-                <label class="text-inline">RB/WR:
-                  <select class="form-control" id="rb_wr" name="rb_wr">
+            <div class='row'>
+              <div class='col-xs-1'>
+                <label class='text-inline'>RB/WR:
+                  <select class='form-control' id='rb_wr' name='rb_wr'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -211,38 +211,38 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">K:
-                  <select class="form-control" id="k" name="k">
+              <div class='col-xs-1'>
+                <label class='text-inline'>K:
+                  <select class='form-control' id='k' name='k'>
                     <option>0</option>
-                    <option selected="selected">1</option>
+                    <option selected='selected'>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">DST:
-                  <select class="form-control" id="dst" name="dst">
+              <div class='col-xs-1'>
+                <label class='text-inline'>DST:
+                  <select class='form-control' id='dst' name='dst'>
                     <option>0</option>
-                    <option selected="selected">1</option>
+                    <option selected='selected'>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">Bench:
-                  <select class="form-control" id="bench" name="bench">
+              <div class='col-xs-1'>
+                <label class='text-inline'>Bench:
+                  <select class='form-control' id='bench' name='bench'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
-                    <option selected="selected">6</option>
+                    <option selected='selected'>6</option>
                     <option>7</option>
                     <option>8</option>
                     <option>9</option>
@@ -291,10 +291,10 @@
                 </label>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xs-1">
-                <label class="text-inline">IDP Flex:
-                  <select class="form-control" id="idp" name="idp">
+            <div class='row'>
+              <div class='col-xs-1'>
+                <label class='text-inline'>IDP Flex:
+                  <select class='form-control' id='idp' name='idp'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -305,9 +305,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">DL:
-                  <select class="form-control" id="dl" name="dl">
+              <div class='col-xs-1'>
+                <label class='text-inline'>DL:
+                  <select class='form-control' id='dl' name='dl'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -318,9 +318,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">LB:
-                  <select class="form-control" id="lb" name="lb">
+              <div class='col-xs-1'>
+                <label class='text-inline'>LB:
+                  <select class='form-control' id='lb' name='lb'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -331,9 +331,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">DB:
-                  <select class="form-control" id="db" name="db">
+              <div class='col-xs-1'>
+                <label class='text-inline'>DB:
+                  <select class='form-control' id='db' name='db'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -345,10 +345,10 @@
                 </label>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xs-1">
-                <label class="text-inline">DE:
-                  <select class="form-control" id="de" name="de">
+            <div class='row'>
+              <div class='col-xs-1'>
+                <label class='text-inline'>DE:
+                  <select class='form-control' id='de' name='de'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -359,9 +359,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">DT:
-                  <select class="form-control" id="dt" name="dt">
+              <div class='col-xs-1'>
+                <label class='text-inline'>DT:
+                  <select class='form-control' id='dt' name='dt'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -372,9 +372,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">CB:
-                  <select class="form-control" id="cb" name="cb">
+              <div class='col-xs-1'>
+                <label class='text-inline'>CB:
+                  <select class='form-control' id='cb' name='cb'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -385,9 +385,9 @@
                   </select>
                 </label>
               </div>
-              <div class="col-xs-1">
-                <label class="text-inline">S:
-                  <select class="form-control" id="s" name="s">
+              <div class='col-xs-1'>
+                <label class='text-inline'>S:
+                  <select class='form-control' id='s' name='s'>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -402,7 +402,7 @@
           </div>
         </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type='submit' class='btn btn-default'>Submit</button>
       </form>
     </div>
   </body>
