--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,16 +2,16 @@
 
 <body>
     <form action='/register' method='POST'>
-        <div class="form-group">
-            <label for="username">userame</label>
-            <input type="text" name="username" class="form-control" id="username">
+        <div class='form-group'>
+            <label for='username'>userame</label>
+            <input type='text' name='username' class='form-control' id='username'>
         </div>
-        <div class="form-group">
-            <label for="password">password</label>
-            <input type="password" name="password" class="form-control" id="password">
+        <div class='form-group'>
+            <label for='password'>password</label>
+            <input type='password' name='password' class='form-control' id='password'>
         </div>
         <div>
-            <button type="submit" value="Send" id="submit" class="form-control">submit</button>
+            <button type='submit' value='Send' id='submit' class='form-control'>submit</button>
         </div>
     </form>
 </body>
