--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/_header %>
 
   <body>
-    <div class="container">
+    <div class='container'>
       <h1>League ***LEAGUE_NUMBER***</h1>
     </div>
 
