--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -1,7 +1,7 @@
 <% include ../../partials/_header %>
 
   <body>
-    <div class="container">
+    <div class='container'>
       <h1>Football Home</h1>
     </div>
 
