changed view form

--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -9,13 +9,18 @@
     <div class="container">
       <h1>League <%= (leagueData.league.id) %></h1>
     </div>
+
+    <div class="container">
+      <a>Edit League</a> <a>Create Draft</a>
+    </div>
+
     <div class="container">
       <h3>Teams:</h3>
-      <p>Team Name - Draft Position</p>
       <% teamData.forEach(function(team) { %>
-        <p><%= (team.name) %> - <%= (team.draft_position) %></p>
+        <p><%= (team.name) %> - <%= (team.draft_position) %> - <a>claim team</a></p>
       <% }); %>
     </div>
+
     <div class="container">
       <h3>League Settings:</h3>
       <p>Name - <%= (leagueData.league.name) %> </p>
@@ -26,15 +31,13 @@
         <p>Keepers - <%= (leagueData.league.keepers) %></p>
       <% } %>
     </div>
+
     <div class="container">
       <h3>Roster Positions:</h3>
       <% for (var key in leagueData.positions) { %>
         <p> <%= key.replace(/_/g, '/') %> - <%= leagueData.positions[key] %> </p>
       <% } %>
     </div>
-
-
-
 
   </body>
 </html>
