added login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,11 @@
 <% include ./partials/_header %>
 
 <body>
-    <h1>REGISTER</h1>
-    <form action='/register' method='POST'>
+    <h1>LOGIN</h1>
+    <form action='/login' method='POST'>
         <div class='form-group'>
             <label for='username'>userame</label>
             <input type='text' name='username' class='form-control' id='username'>
-        </div>
-        <div class='form-group'>
-            <label for='email'>email</label>
-            <input type='text' name='email' class='form-control' id='email'>
         </div>
         <div class='form-group'>
             <label for='password'>password</label>
@@ -20,4 +16,3 @@
         </div>
     </form>
 </body>
-
