cleaned up add league. created db function to create a new draft. added route for creating new draft. created views also. Created helper function to return the current year

--- a/views/football/league/create.ejs
+++ b/views/football/league/create.ejs
@@ -12,11 +12,11 @@
     <div class='container'>
       <form action='/football/league/create' method='post'>
         <div class='form-group'>
-          <label for='email'>League Name:</label>
+          <label for='name'>League Name:</label>
           <input type='text' class='form-control' id='name' name='name'>
         </div>
         <div class='form-group'>
-          <label for='email'>Number of Teams:
+          <label for='size'>Number of Teams:
           <select class='form-control' id='size' name='size'>
                 <option>4</option>
                 <option>5</option>
