added login and register browser navigation buttons

--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -9,5 +9,8 @@
     <div class="container">
       <h1>Football Home</h1>
     </div>
+    <div>
+      <p><a href='/login'>Login</a> or <a href='/register'>register</a></p>    
+    </div>
   </body>
 </html>
