--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,5 +14,8 @@
         <div>
             <button type='submit' value='Send' id='submit' class='form-control'>submit</button>
         </div>
+        <div>
+            <p>Or click here to <a href='/register'>register</a></p>    
+        </div>    
     </form>
 </body>
