--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,6 +18,9 @@
         <div>
             <button type='submit' value='Send' id='submit' class='form-control'>submit</button>
         </div>
+        <div>
+            <p>Back to <a href='/login'>login</a></p>    
+        </div>
     </form>
 </body>
 
