--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -6,11 +6,9 @@
   </head>
 
   <body>
+    <% include ../partials/nav %>
     <div class="container">
       <h1>Football Home</h1>
-    </div>
-    <div>
-      <p><a href='/login'>Login</a> or <a href='/register'>register</a></p>    
     </div>
   </body>
 </html>
